# CurrencyExchange

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  config.example.toml  pyproject.toml
docs/: api.md
src/currency_exchange/: config.py  ioc.py  main.py
src/currency_exchange/application/: exceptions.py  iteractors.py  models.py  repo.py
src/currency_exchange/application/interactors/: currencies.py  exchange_rates.py
src/currency_exchange/domain/: exceptions.py  models.py  services.py  value_objects.py
src/currency_exchange/infrastructure/: in_memory_repo.py
src/currency_exchange/infrastructure/database/: converters.py  repo.py
src/currency_exchange/infrastructure/database/migrations/: create_tables_currency_exchange.py
src/currency_exchange/presentation/handlers/: currencies.py  exchange.py  exchange_rates.py
src/simple_di/: __init__.py  container.py  integration.py
src/simple_server/: __init__.py  app.py  encoder.py  exceptions.py  match_path.py  middleware.py  request.py  router.py  types.py
systemd/: currency_exchange.service
tests/: conftest.py
tests/integration/: test_sqlite_repo.py
tests/unit/: test_domain.py
